# sensor_board

./: .gitignore  CMakeLists.txt  README.md  package.xml  pendientes
config/: config_rviz_aerial_viewer  rviz_aerial_config.rviz  rviz_config.rviz  rviz_final_imu_gps_camera.rviz  rviz_imu_config.rviz  sensor_board.perspective
config/ssl/: how_generate_certificates.txt  server_cert.pem  server_csr.pem  server_key.pem
docs/: config_ntp_client_server.txt
launch/: PC_launcher_sensor_board.launch  raspberry_sensor_board_init.launch  sensor_board_init.launch
src/: launch_node_js_app.sh  load_requirements.sh  sensor_imu_publisher.py  storage_bag_recorder.py  useful commands.txt
src/classes/: BNO055.py  imu_data.py  imu_publisher.py
src/classes/bags/: recorder.py
src/old/: BNO055.py
src/test/: BNO055_I2C.py  test_bag_recorder.py  test_bno055_i2c.py
srv/: record_msg.srv
